# MyNDK2

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/georgeren/myndk2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.c
app/src/main/java/com/georgeren/myndk2/: MainActivity.java  VideoPlayer.java  VideoUtils.java
app/src/main/java/com/georgeren/myndk2/view/: VideoView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/georgeren/myndk2/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
